@@ -3,7 +3,7 @@
  * :tabSize=8:indentSize=8:noTabs=false:
  * :folding=explicit:collapseFolds=1:
  *
- * Copyright (C) 1998, 2002 Slava Pestov
+ * Copyright (C) 1998, 2003 Slava Pestov
  * Portions copyright (C) 1999 mike dillon
  *
  * This program is free software; you can redistribute it and/or
@@ -100,6 +100,13 @@ public abstract class OptionsDialog extends EnhancedDialog
 			dispose();
 	} //}}}
 
+	//{{{ dispose() method
+	public void dispose()
+	{
+		GUIUtilities.saveGeometry(this,name);
+		super.dispose();
+	} //}}}
+
 	//{{{ actionPerformed() method
 	public void actionPerformed(ActionEvent evt)
 	{
@@ -186,10 +193,10 @@ public abstract class OptionsDialog extends EnhancedDialog
 			Math.max(currentSize.width,requestedSize.width),
 			Math.max(currentSize.height,requestedSize.height)
 		);
-		if(newSize.width < 400)
-			newSize.width = 400;
-		if(newSize.height < 300)
-			newSize.height = 300;
+		if(newSize.width < 300)
+			newSize.width = 300;
+		if(newSize.height < 200)
+			newSize.height = 200;
 		setSize(newSize);
 		validate();
 
@@ -321,10 +328,13 @@ public abstract class OptionsDialog extends EnhancedDialog
 			new Object[] { rootNode, rootNode.getMember(i) }));
 		}
 
+		// load geometry before selectPane() since we might need to
+		// enlarge the dialog if the saved geometry is too small.
+		GUIUtilities.loadGeometry(this,name);
+
 		if(pane == null || !selectPane(rootNode,pane))
 			selectPane(rootNode,firstPane);
 
-		setLocationRelativeTo(getParent());
 		show();
 	} //}}}
 
